src/test/deca/context/valid/with_object/DOUBT_class_name_method.deca
class A {
    A a(){ return A;}
}