src/test/deca/context/invalid/with-object/void_attribut_protec_of_class.deca
class A{
    protected void x;
}